// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe mostrar la imagen del context 1`] = `
<div
  className="productCard "
>
  <img
    alt=""
    className="productImg "
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage debe mostrar la imagen pasada por parametro 1`] = `
<img
  alt=""
  className="productImg "
  src="./coffee-mug.png"
/>
`;
